--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,77 @@
 
 body {
  background-color: antiquewhite;
+ font-family: 'Montserrat', sans-serif;
+}
+.container {
+ width: 90%;
+ margin: 20px auto;
+}
+.container::after {
+ content: "";
+ display: block;
+ clear: both;
+}
+.container h1 {
+ text-align: center;
+ font-size: 1.75em;
+ margin-bottom: 40px;
+}
+h1, h2 {
+ font-family: 'Big Shoulders Stencil Text', cursive;
+}
+.section {
+ border: 1px solid black;
+ background: #fcf5ed;
+ position: relative;
+ margin: 15px;
+ padding: 45px 5px 5px 5px;
+ width: 28%;
+ float: left;
+}
+.section-title {
+ border: 1px solid black;
+ position: absolute;
+ top: -1px;
+ right: -1px;
+ padding: 4px 8px;
+ width: 100px;
+ text-align: center;
+ font-size: 1.25em;
+}
+.chicken {
+ background-color: #f3d2bb;
+}
+.beef {
+ background-color: #f79f60;
+}
+.sushi {
+ background-color: #75cc5f;
+}
+
+@media (min-width: 992px) {
+ body {
+  background-color: #ddfcf1;
+ }
+}
+@media (min-width: 768px) and (max-width: 991px){
+ body {
+  background-color: #d8f2fa;
+ }
+ .section {
+  width: 45%;
+ }
+ .third {
+  width: 93%;
+ }
+
+}
+@media (max-width: 767px){
+ body {
+  background-color: #eefcf5;
+ }
+
+ .section {
+  width: 100%;
+ }
 }
